# Vergunning-intake-pro

./: .gitignore  package.json
.github/workflows/: build-macos.yml  build-windows-signed.yml  build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
